fix nav alignment

--- a/src/components/NavMenu/index.css
+++ b/src/components/NavMenu/index.css
@@ -448,9 +448,10 @@ pre {
     }
   }
   img {
-    margin: 0 auto;
+    margin: 1rem auto;
     border: 0.25rem solid var(--highlight);
     border-radius: 1rem;
+    background-color: var(--highlight);
   }
 }
 
@@ -595,7 +596,7 @@ pre {
   font-size: 1.75rem;
   font-weight: 100;
   line-height: 1.1;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   color: var(--neon-cyan);
 }
 
@@ -623,6 +624,7 @@ pre {
     display: grid;
 
     grid-template-columns: repeat(auto-fill, minmax(7rem, 1fr));
+    text-wrap: nowrap;
   }
 }
 
